Add CI workflows for linting and testing
- Create golangci-lint workflow for multi-platform checks
- Add tests workflow with cross-platform test and build validation
- Update Taskfile with new tasks and improved build/test commands
- Enhance .golangci.yml with additional linter configurations

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -77,12 +77,23 @@ linters:
     - whitespace
     - wrapcheck
     - wsl
+    - typecheck
 
 linters-settings:
   stylecheck:
     checks: ['*', '-ST1000']
   cyclop:
     max-complexity: 15
+  govet:
+    check-shadowing: true
+  gofmt:
+    simplify: true
+
+run:
+  deadline: 5m
+  tests: true
+  skip-dirs:
+    - testdata
 
 issues:
   exclude-use-default: false
