Refactor module location and naming checks in analyzer
- Extract `isInvalidLocation` function to simplify module location validation
- Move module call validation logic into separate `checkModuleCall` function
- Add default configuration with predefined module paths and strict naming
- Improve code organization and readability in analyzer.go

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -58,7 +58,6 @@ linters:
     - predeclared
     - reassign
     - revive
-    - shadow
     - staticcheck
     - stylecheck
     - tagalign
@@ -83,6 +82,9 @@ linters-settings:
     checks: ['*', '-ST1000']
   cyclop:
     max-complexity: 15
+  govet:
+    enable:
+      - shadow
 
 run:
   tests: true
